RESOLVED FIXED198781
SocketStreamHandle should not be destroyed in a background thread
https://bugs.webkit.org/show_bug.cgi?id=198781
Summary SocketStreamHandle should not be destroyed in a background thread
youenn fablet
Reported 2019-06-11 21:29:57 PDT
SocketStreamHandle should not be destroyed in a background thread
Attachments
Patch (2.22 KB, patch)
2019-06-11 21:32 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-06-11 21:32:02 PDT
Geoffrey Garen
Comment 2 2019-06-13 10:31:48 PDT
Comment on attachment 371922 [details] Patch r=me
WebKit Commit Bot
Comment 3 2019-06-13 11:14:36 PDT
Comment on attachment 371922 [details] Patch Clearing flags on attachment: 371922 Committed r246405: <https://trac.webkit.org/changeset/246405>
WebKit Commit Bot
Comment 4 2019-06-13 11:14:38 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-06-13 11:22:14 PDT
Note You need to log in before you can comment on or make changes to this bug.