SocketStreamHandle should not be destroyed in a background thread https://bugs.webkit.org/show_bug.cgi?id=198781

Reviewed by Geoffrey Garen.

Make sure to destroy SocketStreamHandle on the main thread since it owns an URL created on the main thread.
Covered by WPT websocket tests from https://bugs.webkit.org/show_bug.cgi?id=198774.

* platform/network/SocketStreamHandle.cpp:
(WebCore::SocketStreamHandle::SocketStreamHandle):
* platform/network/SocketStreamHandle.h:


Canonical link: https://commits.webkit.org/212807@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246405 268f45cc-cd09-0410-ab3c-d52691b4dbfc